--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,27 +19,24 @@ jobs:
 
       - name: Install Dependencies
         run:  npm install
-        working-directory:  App  
 
       - name: Run Tests
         run:  npm test
-        working-directory: App  
+
+      - name: Run Test Mocha 
+        run:  npm run test:all
+        
+      - name: Run Test Frontend
+        run: npm run test:frontend
 
       - name: Build Docker Image
-        run: docker build -t haseeb810/finance-tracker:latest -f docker/Dockerfile .
+        run: docker build -t fahad356/inventory-management:latest -f docker/Dockerfile .
 
       - name: Login to Docker Hub
         run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker Image to Docker Hub
-        run: docker push haseeb810/finance-tracker:latest
-
-      # - name: Build Application
-      #   run: echo "Skipping build step"
-
-
-      # - name: Deploy Haseeb
-      #   run:  echo "Deploying to production.."
+        run: docker push fahad356/inventory-management:latest
 
       - name: Deploy Application
         run: |
