--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,3 +41,9 @@ jobs:
       - name: Deploy Application
         run: |
           echo "Deployment for Windows"
+             - name: Snyk Security Scan
+      - run: |
+          npm install -g snyk
+          snyk auth ${{ secrets.SNYK_TOKEN }}
+          snyk test
+      
